Remove db settings

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_KEY=
 APP_DEBUG=true
 
 DB_CONNECTION=mysql
-DB_HOST=erica-demo-server.mysql.database.azure.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=oojxjvhhkw
-DB_PASSWORD=V7K4VQBEOKDTJM66$
+DB_DATABASE=''
+DB_USERNAME=''
+DB_PASSWORD=''
